2011-06-08  Junji Tojo <Junji.Tojo@cern.ch>
        * Add inputTAGFile in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-48

2011-06-08 Susumu Oda <Susumu.Oda@cern.ch>
	* Add outputNTUP_FASTMONFile to ListOfDefaultPositionalKeys of Merging_trf.py
	  (PATJobTransforms-00-03-45 was not reflected in trunk)
	* Tagging as PATJobTransforms-00-03-47

2011-06-08 Susumu Oda <Susumu.Oda@cern.ch>
	* Changed default ByteStream file to data11_7TeV (python/DefaultInputs.py).  
	* Tagging as PATJobTransforms-00-03-46

2011-05-31 Walter Lampl <walter.lampl@ cern.ch>
	* Add outputNTUP_FASTMONFile to ListOfDefaultPositionalKeys of Merging_trf.py
	* Tagging as PATJobTransforms-00-03-45

2011-05-11  Junji Tojo <Junji.Tojo@cern.ch>
	* Fixed a typo for NTUP_BTAGD3PD in script/Reco_trf.py
	* Tagging as PATJobTransforms-00-03-44

2011-05-24  Maarten Boonekamp
	* add NTUP_SMWZSOFT to Reco_trf
	* Tagging as PATJobTransforms-00-03-43

2011-05-21  Maarten Boonekamp
	* add NTUP_LARNOISE
	* Tagging as PATJobTransforms-00-03-42

2011-05-16  Rolf Seuster <seuster AT cern.ch>
	* run DQHistogramMerge with only single process even with athenaMP
	* Tagging as PATJobTransforms-00-03-41

2011-05-12 Walter Lampl <walter.lampl@cern.ch>
	* Modifications to Configuration.py and skeleton.AODtoTAG_trf.py to run
	  TAG and FastPhysicsMonitoring in the same athena step. 
	* Tagging as PATJobTransforms-00-03-40

2011-05-11  Junji Tojo <Junji.Tojo@cern.ch>
	* Add NTUP_BTAGD3PD in script/Reco_trf.py
	* Tagging as PATJobTransforms-00-03-39

2011-05-09 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Modified python/Configuration.py to use the 'SubSteps' property
	  of the D3PD production flags when setting up the possible
	  D3PD outputs. This exchanges the previous blanket
	  ['a2d','e2d'] definition, and makes it possible to run large
	  D3PD production jobs with D3PD produced at different steps.
	* Tagging as PATJobTransforms-00-03-38

2011-05-04  Sami Kama  <sami.kama@cern.ch>